# circt

include/circt/Dialect/FIRRTL/: FIRRTLAnalyses.h  Passes.h  Passes.td
include/circt/Support/: CriticalPathOptions.h
lib/Dialect/FIRRTL/: CMakeLists.txt
lib/Dialect/FIRRTL/Analyses/: CMakeLists.txt  FanOut.cpp
lib/Dialect/FIRRTL/Import/: FIRAnnotations.cpp
lib/Dialect/FIRRTL/Transforms/: CMakeLists.txt  CriticalPathAnalysis.cpp
lib/Support/: CriticalPathOptions.cpp
tools/: CMakeLists.txt
tools/circt-analyser/: CMakeLists.txt  circt-analyser.cpp
